--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.4
+. [NEW] Rate of change technical indicator.
+
 Version 0.3
 . [NEW] Support for plotting strategies (StrategyPlotter).
 
