Added yahoofinance.get_daily_csv bugfix.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Version 0.4
 . [NEW] Rate of change technical indicator.
+. [FIX] Added error checking to yahoofinance.get_daily_csv.
 
 Version 0.3
 . [NEW] Support for plotting strategies (StrategyPlotter).
