--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Version 0.4
 . [NEW] Rate of change technical indicator.
+. [NEW] Stochastic oscillator technical indicator.
 . [FIX] Added error checking to yahoofinance.get_daily_csv.
 . [FIX] Normalized some method names in StrategyPlotter.
 
