StrategyPlotter now supports plotting a range

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.5
+. [NEW] StrategyPlotter now supports plotting a range.
+
 Version 0.4
 . [NEW] Rate of change technical indicator.
 . [NEW] Stochastic oscillator technical indicator.
