--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ Version 0.7
 . [NEW] Official support for NinjaTrader generated CSV files (pyalgotrade.barfeed.ninjatraderfeed.Feed). csvfeed.NinjaTraderRowParser was removed
 . [NEW] pyalgotrade.barfeed.csvfeed.YahooFeed was moved to pyalgotrade.barfeed.yahoofeed.Feed. pyalgotrade.barfeed.csvfeed.YahooFeed still works but it will be removed soon.
 . [NEW] TA-Lib integration (pyalgotrade.talibext.indicator).
+. [FIX] Was not honoring the good till canceled attribute when submiting exit orders from inside the position classes.
 
 Version 0.6
 . [NEW] Initial support for NinjaTrader export format (csvfeed.NinjaTraderRowParser).
