--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ Version 0.7
 . [CHANGE] pyalgotrade.barfeed.csvfeed.YahooFeed was moved to pyalgotrade.barfeed.yahoofeed.Feed. pyalgotrade.barfeed.csvfeed.YahooFeed still works but it will be removed soon.
 . [CHANGE] Major changes to the broker interface to support other broker types. These changes are not backwards compatible. Thanks Tibor Kiss for adding this.
 . [FIX] Was not honoring the good till canceled attribute when submiting exit orders from inside the position classes.
+. [FIX] Was not getting better prices (when available) for Limit orders. Thanks Tibor Kiss for reporting this.
 
 Version 0.6
 . [NEW] Initial support for NinjaTrader export format (csvfeed.NinjaTraderRowParser).
