--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 Version 0.8 (TBD)
-. [NEW] StrategyPlotter now plots each instrument in a separate subplot. getMainSubplot was replaced by getBarSubplot.
+. [NEW] StrategyPlotter now plots each instrument in a separate subplot. getMainSubplot was replaced by getIntrumentSubplot.
 
 Version 0.7 (22/Aug/2012)
 . [NEW] Backtesting broker allows customizing of order filling strategies.
