--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 0.9 (TBD)
+. [NEW] Strategy analyzers (pyalgotrade.stratanalyzer.trades.WinningLosingTrades).
+
 Version 0.8 (28/Aug/2012)
 . [NEW] StrategyPlotter now plots each instrument in a separate subplot. getMainSubplot was replaced by getIntrumentSubplot.
 . [NEW] Strategy.exitPosition allows setting the exit order as GTC or not, or matching the entry order (default).
