--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 Version 0.10 (TBD)
-. [NEW] Strategy analyzers (pyalgotrade.stratanalyzer.trades.WinningLosingTrades).
+. [NEW] Strategy analyzers (pyalgotrade.stratanalyzer.trades.BasicAnalyzer and pyalgotrade.stratanalyzer.sharpe.SharpeRatio).
 
 Version 0.9 (1/Sep/2012)
 . [NEW] Added a method to the strategy class to get notified when an order gets updated (onOrderUpdated). This is only called if the order was placed using the broker interface directly.
