--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 Version 0.10 (TBD)
-. [NEW] Strategy analyzers (pyalgotrade.stratanalyzer.trades.BasicAnalyzer and pyalgotrade.stratanalyzer.sharpe.SharpeRatio).
+. [NEW] Sharpe Ratio analysis (pyalgotrade.stratanalyzer.sharpe.SharpeRatio).
+. [NEW] Max. drawdown and max. drawdown duration analysis (pyalgotrade.stratanalyzer.drawdown.DrawDown).
+. [NEW] Winning/Losing trades analysis (pyalgotrade.stratanalyzer.trades.BasicAnalyzer).
 
 Version 0.9 (1/Sep/2012)
 . [NEW] Added a method to the strategy class to get notified when an order gets updated (onOrderUpdated). This is only called if the order was placed using the broker interface directly.
