--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
 Version 0.10 (TBD)
 . [NEW] Sharpe Ratio analysis (pyalgotrade.stratanalyzer.sharpe.SharpeRatio).
 . [NEW] Max. drawdown and max. drawdown duration analysis (pyalgotrade.stratanalyzer.drawdown.DrawDown).
-. [NEW] Returns analysis (pyalgotrade.stratanalyzer.returns.ReturnsAnalyzer).
-. [NEW] Winning/Losing trades analysis (pyalgotrade.stratanalyzer.trades.BasicAnalyzer).
+. [NEW] Returns analysis (pyalgotrade.stratanalyzer.returns.Returns).
+. [NEW] Trades analysis (pyalgotrade.stratanalyzer.trades.Trades).
 . [FIX] Fixed returns calculations for short positions. Thanks John Fawcett for explaining this.
 
 Version 0.9 (1/Sep/2012)
