--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ Version 0.10 (TBD)
 . [NEW] Returns analysis (pyalgotrade.stratanalyzer.returns.Returns).
 . [NEW] Trades analysis (pyalgotrade.stratanalyzer.trades.Trades).
 . [FIX] Fixed returns calculations for short positions. Thanks John Fawcett for explaining this.
+. [FIX] Fixed a bug in the Strategy class and the backtesting broker when dealing with multiple instruments.  Was not handling absence of bars appropriately. Thanks Fabian Braennstroem for reporting this.
 
 Version 0.9 (1/Sep/2012)
 . [NEW] Added a method to the strategy class to get notified when an order gets updated (onOrderUpdated). This is only called if the order was placed using the broker interface directly.
