--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,8 @@ Version 0.10 (TBD)
 . [NEW] Returns analysis (pyalgotrade.stratanalyzer.returns.Returns).
 . [NEW] Trades analysis (pyalgotrade.stratanalyzer.trades.Trades).
 . [NEW] Support for bar timezones (pyalgotrade.marketsession).
-. [NEW] Support for sequence like operations in dataseries (getValue and getValueAbsolute will soon get deprecated).
+. [NEW] Support for sequence like operations in dataseries (__getitem__ and __len__. getValue and getValueAbsolute will soon get deprecated).
+. [NEW] Support for mapping like operations in bar feeds (__getitem__ and __contains__).
 . [NEW] Support for mapping like operations in bar.Bars (__getitem__ and __contains__).
 . [FIX] Fixed returns calculations for short positions. Thanks John Fawcett for explaining this.
 . [FIX] Fixed a bug in the Strategy class and the backtesting broker when dealing with multiple instruments. Was not handling absence of bars appropriately. Thanks Fabian Braennstroem for reporting this.
