--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,6 @@
 Version 0.10 (TBD)
 . [NEW] Sharpe Ratio analysis (pyalgotrade.stratanalyzer.sharpe.SharpeRatio).
-. [NEW] Max. drawdown and max. drawdown duration analysis
-(pyalgotrade.stratanalyzer.drawdown.DrawDown). Thanks Sedov Anton for reporting a bug in the early implementation.
+. [NEW] Max. drawdown and max. drawdown duration analysis (pyalgotrade.stratanalyzer.drawdown.DrawDown). Thanks Sedov Anton for reporting a bug in the early implementation.
 . [NEW] Returns analysis (pyalgotrade.stratanalyzer.returns.Returns).
 . [NEW] Trades analysis (pyalgotrade.stratanalyzer.trades.Trades).
 . [NEW] Support for bar timezones (pyalgotrade.marketsession).
@@ -9,6 +8,7 @@ Version 0.10 (TBD)
 . [NEW] Support for mapping like operations in bar feeds (__getitem__ and __contains__).
 . [NEW] Support for mapping like operations in bar.Bars (__getitem__ and __contains__).
 . [CHANGE] broker.backtesting.Broker.getValue no longer needs the bars as a parameter. It will take those out of the feed.
+. [FIX] broker.backtesting.getActiveOrders was not returning all orders during event dispatching.
 . [FIX] Fixed returns calculations for short positions. Thanks John Fawcett for explaining this.
 . [FIX] Fixed a bug in the Strategy class and the backtesting broker when dealing with multiple instruments. Was not handling absence of bars appropriately. Thanks Fabian Braennstroem for reporting this.
 
