--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@ Version 0.10 (TBD)
 . [NEW] Support for sequence like operations in dataseries (__getitem__ and __len__. getValue and getValueAbsolute will soon get deprecated).
 . [NEW] Support for mapping like operations in bar feeds (__getitem__ and __contains__).
 . [NEW] Support for mapping like operations in bar.Bars (__getitem__ and __contains__).
+. [NEW] Google App Engine: Added support for re-executing strategies.
 . [CHANGE] broker.backtesting.Broker.getValue no longer needs the bars as a parameter. It will take those out of the feed.
 . [FIX] broker.backtesting.getActiveOrders was not returning all orders during event dispatching.
 . [FIX] Fixed returns calculations for short positions. Thanks John Fawcett for explaining this.
