--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 Version 0.11 (TBD)
-. [NEW] Function to align 2 DataSeries with respect to time (pyalgotrade.dataseries.datetime_aligned).
-. [NEW] DataSeries now provide the datetime associted with each value (getDateTimes), making it easier to plot using matplotlib.
+. [NEW] DataSeries now provide the datetime associated with each value (getDateTimes), making it easier to plot using matplotlib.
+. [NEW] Function to align two DataSeries with respect to time (pyalgotrade.dataseries.datetime_aligned).
 . [NEW] VWAP technical indicator.
 
 Version 0.10 (11/Jan/2013)
