--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,9 @@
-Version 0.11 (TBD)
+Version 0.11 (17/Mar/2013)
 . [NEW] DataSeries now provide the datetime associated with each value (getDateTimes), making it easier to plot using matplotlib.
 . [NEW] Function to align two DataSeries with respect to time (pyalgotrade.dataseries.datetime_aligned).
 . [NEW] VWAP technical indicator (pyalgotrade.technical.vwap.VWAP).
 . [NEW] Line Break technical indicator (pyalgotrade.technical.linebreak.LineBreak).
-. [NEW] Methods to calculate unrealizeds returns and PnL in positions (getUnrealizedReturn and getUnrealizedNetProfit).
+. [NEW] Methods to calculate unrealized returns and PnL in positions (getUnrealizedReturn and getUnrealizedNetProfit).
 . [FIX] An IndexError exception was raised in plotter.py when plotting many dataseries in the same subplot.
 
 Version 0.10 (11/Jan/2013)
