--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Version 0.12 (TBD)
 . [NEW] StrategyPlotter now allows plotting custom functions.
 . [NEW] Optimizations in different areas.
 . [NEW] Standard deviation technical indicator (pyalgotrade.technical.stats.StdDev).
+. [NEW] Bollinger Bands technical indicator (pyalgotrade.technical.bollinger.BollingerBands).
 . [FIX] Fixed a bug in EMA technical that could lead to max. recursion limit error.
 . [FIX] Fixed a bug in the Strategy class that had a big impact on execution time. Bookkeeping for active positions and orders was not handled properly.
 
