--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Version 0.13 (TBD)
 . [CHANGE] BarValueDataSeries and BarDataSeries where moved from pyalgotrade.dataseries into pyalgotrade.bards.dataseries.
+. [CHANGE] pyalgotrade.technical.cross.CrossAbove and pyalgotrade.technical.cross.CrossBelow were refactored as functions (pyalgotrade.technical.cross.cross_above and pyalgotrade.technical.cross.cross_below). They are not DataSeries any more.
 
 Version 0.12 (20/Apr/2013)
 . [NEW] pyalgotrade.optimizer now has worker names associated with each worker. Thanks Matthieu Locas for implementing this.
