--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Version 0.13 (TBD)
 . [NEW] pyalgotrade.dataseries.SequenceDataSeries and DataSeries filters (everything inside the pyalgotrade.technical package) now support setting the maximum number of values to hold in case you don't want them to grow too much.
 . [NEW] StrategyPlotter now calls autofmt_xdate on the figure before plotting it. Thanks Thomas Jung for suggesting this.
 . [NEW] StrategyPlotter now supports only building the figure so you can customize it (StrategyPlotter.buildFigure).
+. [CHANGE] Sharpe Ratio analyzer was modified to better support intraday trading. The tradingPeriods parameter is not supported anymore.
 . [CHANGE] In order to resubmit the exit order for a position, the orignal exit order has to be canceled first using cancelExit.
 . [CHANGE] DataSeries and DataSeries filters (everything inside the pyalgotrade.technical package) were refactored to an event based model.
 . [CHANGE] BarValueDataSeries and BarDataSeries were moved from pyalgotrade.dataseries into pyalgotrade.bards.dataseries.
