pyalgotrade.technical.roc.RateOfChange indicator was changed and now it doesn't multiply by 100 the results.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@ Version 0.13 (TBD)
 . [NEW] Added tools to resample BarFeeds to different frequencies and using them (pyalgotrade.tools.resample and pyalgotrade.barfeed.csvfeed.GenericBarFeed).
 . [NEW] High and Low technical indicators (pyalgotrade.technical.highlow.High and pyalgotrade.technical.highlow.Low).
 . [NEW] Added a BarDataSeries that can resample another BarDataSeries to a higher frequency (pyalgotrade.dataseries.resampled.ResampledBarDataSeries).
+. [CHANGE] pyalgotrade.technical.roc.RateOfChange indicator was changed and now it doesn't multiply by 100 the results.
 . [CHANGE] The pyalgotrade.technical.trend package does not depend on SciPy any more.
 . [CHANGE] Strategy class was renamed to BacktestingStrategy (the old name is still supported in this version).
 . [CHANGE] Max. drawdown duration is now returned as a datetime.timedelta object.
