--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ Version 0.14 (TBD)
 . [FIX] Fixed a bug in the trades analyzer. Proportional commissions when switching from long to short or viceversa were not properly calculated. Thanks Sam Jackson for reporting this and providing a patch.
 . [FIX] Fixed a bug when using the optimizer and a broker with adjusted values.
 . [CHANGE] broker.backtesting.FillStrategy was changed to return a broker.backtesting.FillInfo instance.
+. [CHANGE] broker.backtesting.FillStrategy now takes bar volume into account to fill an order.
 
 Version 0.13 (26/Aug/2013)
 . [NEW] Added support for handling realtime Twitter events (pyalgotrade.twitter.feed).
