Removed getFirstValidPos and getLength from DataSeries interface.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 Version 0.15 (TBD)
-. [CHANGE] Removed some deprecated methods from DataSeries (appendValue, appendValueWithDatetime, getValue, getValues, getValuesAbsolute).
+. [CHANGE] Removed some deprecated methods from DataSeries (appendValue, appendValueWithDatetime, getValue, getValues, getValuesAbsolute, getFirstValidPos and getLength).
 
 Version 0.14 (12/Oct/2013)
 . [NEW] Event profiler inspired in QSTK (pyalgotrade.eventprofiler).
